[package]
name = "mhfrontier-cq-tool-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
actix-web = "4"
actix-multipart = "0.6.1"
actix-files = "0.6.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
encoding_rs = "0.8.31"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]