[package]
name = "mhfrontier-cq-tool-api"
version = "1.0.0"
edition = "2021"

[dependencies]
better_cursor = { path = "libs/better_cursor"}
rusty_refrontier = { path = "libs/rusty_refrontier"}

axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["auth", "trace", "fs"] }
crc32fast = "1.4.0"

# encoding_rs = "0.8.31"
# log = "0.4"
# env_logger = "0.9"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]